--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div class="right-sub-section">
         <div class="img-container">
 
-          <img src="/assets/images/hero-banner.jpg" alt="hero-banner" class="hero-banner-img" height="450" width="450">
+          <img src="assets/images/hero-banner.jpg" alt="hero-banner" class="hero-banner-img" height="450" width="450">
         </div>
       </div>
     </section>
@@ -142,7 +142,7 @@
               <!-- image -->
               <figure class="card-banner-container">
 
-                <img src="/assets/images/item-bg-1.jpg" alt="card1" class="card-banner-img">
+                <img src="assets/images/item-bg-1.jpg" alt="card1" class="card-banner-img">
 
                 <div class="card-banner-action">
                   <!-- menu-bar -->
@@ -172,7 +172,7 @@
 
                   <div class="left-container">
                     <!-- img -->
-                    <img src="/assets/images/bidding-user.png" alt="user-img" class="user-img">
+                    <img src="assets/images/bidding-user.png" alt="user-img" class="user-img">
                     <div class="name-container">
                       <h6 class="user-fullname">USERNAME</h6>
                       <span class="user-username">@username</span>
@@ -217,7 +217,7 @@
               <!-- image -->
               <figure class="card-banner-container">
 
-                <img src="/assets/images/item-bg-1.jpg" alt="card1" class="card-banner-img">
+                <img src="assets/images/item-bg-1.jpg" alt="card1" class="card-banner-img">
 
                 <div class="card-banner-action">
                   <!-- menu-bar -->
@@ -247,7 +247,7 @@
 
                   <div class="left-container">
                     <!-- img -->
-                    <img src="/assets/images/bidding-user.png" alt="user-img" class="user-img">
+                    <img src="assets/images/bidding-user.png" alt="user-img" class="user-img">
                     <div class="name-container">
                       <h6 class="user-fullname">USERNAME</h6>
                       <span class="user-username">@username</span>
@@ -292,7 +292,7 @@
               <!-- image -->
               <figure class="card-banner-container">
 
-                <img src="/assets/images/item-bg-1.jpg" alt="card1" class="card-banner-img">
+                <img src="assets/images/item-bg-1.jpg" alt="card1" class="card-banner-img">
 
                 <div class="card-banner-action">
                   <!-- menu-bar -->
@@ -322,83 +322,7 @@
 
                   <div class="left-container">
                     <!-- img -->
-                    <img src="/assets/images/bidding-user.png" alt="user-img" class="user-img">
-                    <div class="name-container">
-                      <h6 class="user-fullname">USERNAME</h6>
-                      <span class="user-username">@username</span>
-                    </div>
-                    <!-- user-fullname -->
-                    <!-- @username -->
-                  </div>
-
-                  <!-- div-right -->
-                  <div class="right-container">
-                    <div class="name-container">
-                      <h6 class="user-fullname">00.333ETH</h6>
-                      <span class="user-username">Current Bid</span>
-                    </div>
-                  </div>
-                </div>
-
-
-                <!-- card-footer -->
-                <div class="card-footer">
-                  <!-- text -->
-                  <p class="card-footer-text">
-                    12+ Place Bid.
-                  </p>
-
-                  <button class="card-footer-btn">
-                    New
-                  </button>
-                  <!-- button -->
-                </div>
-
-              </div>
-
-
-
-            </div>
-          </li>
-
-
-          <li class="card-item">
-
-            <div class="card-container">
-              <!-- image -->
-              <figure class="card-banner-container">
-
-                <img src="/assets/images/item-bg-1.jpg" alt="card1" class="card-banner-img">
-
-                <div class="card-banner-action">
-                  <!-- menu-bar -->
-                  <button class="btn-menu-bar">
-                    <ion-icon name="ellipsis-horizontal-outline"></ion-icon>
-                  </button>
-
-                  <!-- heart -->
-                  <button class="btn-heart">
-                    <ion-icon name="heart"></ion-icon>
-                  </button>
-
-                </div>
-
-              </figure>
-
-              <!-- card-content -->
-              <div class="card-content">
-                <!-- card-title -->
-                <h3 class="card-title">
-                  Dimond riding a blue body art
-                </h3>
-
-                <!-- user-meta-data -->
-                <div class="user-data-container">
-                  <!-- div-left -->
-
-                  <div class="left-container">
-                    <!-- img -->
-                    <img src="/assets/images/bidding-user.png" alt="user-img" class="user-img">
+                    <img src="assets/images/bidding-user.png" alt="user-img" class="user-img">
                     <div class="name-container">
                       <h6 class="user-fullname">USERNAME</h6>
                       <span class="user-username">@username</span>
@@ -444,7 +368,7 @@
               <!-- image -->
               <figure class="card-banner-container">
 
-                <img src="/assets/images/item-bg-1.jpg" alt="card1" class="card-banner-img">
+                <img src="assets/images/item-bg-1.jpg" alt="card1" class="card-banner-img">
 
                 <div class="card-banner-action">
                   <!-- menu-bar -->
@@ -474,7 +398,83 @@
 
                   <div class="left-container">
                     <!-- img -->
-                    <img src="/assets/images/bidding-user.png" alt="user-img" class="user-img">
+                    <img src="assets/images/bidding-user.png" alt="user-img" class="user-img">
+                    <div class="name-container">
+                      <h6 class="user-fullname">USERNAME</h6>
+                      <span class="user-username">@username</span>
+                    </div>
+                    <!-- user-fullname -->
+                    <!-- @username -->
+                  </div>
+
+                  <!-- div-right -->
+                  <div class="right-container">
+                    <div class="name-container">
+                      <h6 class="user-fullname">00.333ETH</h6>
+                      <span class="user-username">Current Bid</span>
+                    </div>
+                  </div>
+                </div>
+
+
+                <!-- card-footer -->
+                <div class="card-footer">
+                  <!-- text -->
+                  <p class="card-footer-text">
+                    12+ Place Bid.
+                  </p>
+
+                  <button class="card-footer-btn">
+                    New
+                  </button>
+                  <!-- button -->
+                </div>
+
+              </div>
+
+
+
+            </div>
+          </li>
+
+
+          <li class="card-item">
+
+            <div class="card-container">
+              <!-- image -->
+              <figure class="card-banner-container">
+
+                <img src="assets/images/item-bg-1.jpg" alt="card1" class="card-banner-img">
+
+                <div class="card-banner-action">
+                  <!-- menu-bar -->
+                  <button class="btn-menu-bar">
+                    <ion-icon name="ellipsis-horizontal-outline"></ion-icon>
+                  </button>
+
+                  <!-- heart -->
+                  <button class="btn-heart">
+                    <ion-icon name="heart"></ion-icon>
+                  </button>
+
+                </div>
+
+              </figure>
+
+              <!-- card-content -->
+              <div class="card-content">
+                <!-- card-title -->
+                <h3 class="card-title">
+                  Dimond riding a blue body art
+                </h3>
+
+                <!-- user-meta-data -->
+                <div class="user-data-container">
+                  <!-- div-left -->
+
+                  <div class="left-container">
+                    <!-- img -->
+                    <img src="assets/images/bidding-user.png" alt="user-img" class="user-img">
                     <div class="name-container">
                       <h6 class="user-fullname">USERNAME</h6>
                       <span class="user-username">@username</span>
@@ -537,7 +537,7 @@
                 01
               </div>
               <div class="image-container">
-                <img src="./assets/images/single-create-sell-item-1.png" alt="wallet icon">
+                <img src=".assets/images/single-create-sell-item-1.png" alt="wallet icon">
               </div>
 
               <h3 class="about-title">
@@ -557,7 +557,7 @@
                 01
               </div>
               <div class="image-container">
-                <img src="./assets/images/single-create-sell-item-1.png" alt="wallet icon">
+                <img src=".assets/images/single-create-sell-item-1.png" alt="wallet icon">
               </div>
 
               <h3 class="about-title">
@@ -577,7 +577,7 @@
                 01
               </div>
               <div class="image-container">
-                <img src="./assets/images/single-create-sell-item-1.png" alt="wallet icon">
+                <img src=".assets/images/single-create-sell-item-1.png" alt="wallet icon">
               </div>
 
               <h3 class="about-title">
@@ -597,7 +597,7 @@
                 01
               </div>
               <div class="image-container">
-                <img src="./assets/images/single-create-sell-item-1.png" alt="wallet icon">
+                <img src=".assets/images/single-create-sell-item-1.png" alt="wallet icon">
               </div>
 
               <h3 class="about-title">
